--- a/style.css
+++ b/style.css
@@ -40,14 +40,13 @@ a {
     flex-direction: column;
     padding: 100px 0 100px 250px;
 }
-
 .header_l_1 {
     color: #F9FAF8;
     font-weight: bolder;
     font-size: 48px;
 }
 .text_l_1 {
-    color:#E5E7EB;
+    color:#E5E7EB; 
     font-size: 18px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -70,4 +69,45 @@ a {
     margin: 100px 250px 100px 0;
     background-color: grey;
     color: #E5E7EB;
+    border-radius: 8px;
+}
+.body2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+}
+.header2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    padding: 20px;
+}
+.main2 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.box2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    width: 200px;
+}
+
+.frame2 {
+    width: 190px;
+    height: 190px;
+    border: 3px black;
+    border-radius: 8px;
+    background-color: #1F2937;
+    margin: 25px;
+}
+.text2 {
+    color: #1F2937;
+    font-size: 18px;
+    font-weight: 300;
+    margin-top: -15px;
 }
