--- a/style.css
+++ b/style.css
@@ -98,11 +98,12 @@ a {
 }
 
 .frame2 {
+    display: block;
     width: 190px;
     height: 190px;
-    border: 3px black;
+    border: 5px black;
     border-radius: 8px;
-    background-color: #1F2937;
+    background-color: #E5E7EB;
     margin: 25px;
 }
 .text2 {
@@ -110,4 +111,32 @@ a {
     font-size: 18px;
     font-weight: 300;
     margin-top: -15px;
+}
+.body3 {
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+}
+.text3 {
+    display: flex;
+    padding: 120px 350px 0 350px;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+}
+.author3 {
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px 350px 120px 350px;
+}
+.body4{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+}
+.main4 {
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 40px 240px 40px 240px;
 }
