--- a/style.css
+++ b/style.css
@@ -133,10 +133,43 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 300px;
+    height: 350px;
 }
 .main4 {
+    display: flex;
+    justify-content: space-around;
     background-color: #3882F6;
     border-radius: 10px;
-    padding: 40px 240px 40px 240px;
+    width: 900px;
+    padding: 40px 120px 40px 120px;
+}
+.mainleft4 {
+    display: flex;
+    flex-direction: column;
+}
+.text4up {
+    font-size: 24px;
+    color: white;
+    font-weight: 700;
+    margin-bottom: 3px;
+}
+.text4down {
+    color: #E5E7EB;
+    font-weight: 200;
+}
+
+.button4 {
+    height: 40px;
+    width: 120px;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    align-items: center;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: 5px white;
+    border-radius: 8px;
+    color: white;
+    font-weight: 700;
+    font-size: 14px;
 }
