--- a/style.css
+++ b/style.css
@@ -101,9 +101,8 @@ a {
     display: block;
     width: 190px;
     height: 190px;
-    border: 5px black;
+    border: 5px solid #3882F6;
     border-radius: 8px;
-    background-color: #E5E7EB;
     margin: 25px;
 }
 .text2 {
@@ -167,7 +166,7 @@ a {
     align-items: center;
     background-color: transparent;
     background-repeat: no-repeat;
-    border: 5px white;
+    border: 1px solid white;
     border-radius: 8px;
     color: white;
     font-weight: 700;
